# tg_hyper_librarian

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  generate_default.py  generate_test.py  pyproject.toml
profiles/: example.py
src/providers/: http.py  r2.py  sftp.py
src/tg_hyper_librarian/formats/c2luZy1ib3g/: __init__.py  _common.py  c2lu.py  complex_c2lu.py  deserializer.py  logical_group.py  serializer.py  succinct.py
src/tg_hyper_librarian/formats/c2lu_json/: __init__.py  deserializer.py  serializer.py
src/tg_hyper_librarian/io/: __init__.py  zlib_io.py
src/tg_hyper_librarian/models/: __init__.py  complex_rule.py  ip_network_list.py  ip_range.py  operators.py  rule_set.py  rule_unit.py
src/tg_hyper_librarian/parsers/: adguard.py  apnic.py  c2luZy1ib3g.py  dnsmasq.py  hosts.py  maxmind.py
tests/formats/c2luZy1ib3g/: test_succinct.py
tests/io/: test_zlib_io.py
tests/models/: test_ip_network_list.py
tg_hyper_librarian/dest/: s3.py
tg_hyper_librarian/formats/c2luZy1ib3g/: __init__.py  _common.py  deserializer.py  ip_range.py  logical_rule.py  regular_rule.py  serializer.py  succinct.py
tg_hyper_librarian/formats/json/: __init__.py  deserializer.py  serializer.py
tg_hyper_librarian/models/: __init__.py  operators.py  rule_unit.py
tg_hyper_librarian/parsers/: adguard.py  apnic.py  c2luZy1ib3g.py  dnsmasq.py  hosts.py  maxmind.py
tg_hyper_librarian/parsers/utils/: http_client.py
tg_hyper_librarian/profiles/: default.py  test.py
