[project]
name = "tg-hyper-librarian"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "k3-cat", email = "k3-cat@outlook.com" }
]
dependencies = [
    "boto3>=1.34.128",
    "maxminddb>=2.6.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tg_hyper_librarian"]
