[project]
name = "tg-hyper-librarian"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "k3-cat", email = "k3-cat@outlook.com" }
]
dependencies = [
    "maxminddb>=2.6.2",
    "bitarray>=2.9.2",
    "typing-extensions>=4.12.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
http = [
    "urllib3>=2.2.2",
]
s3 = [
    "boto3>=1.34.137",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tg_hyper_librarian"]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["./src"]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "basic: mark a test as a basic utils"
]
